--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "antd": "^5.1.7",
     "axios": "^1.4.0",
     "buffer": "^6.0.3",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.9",
     "framer-motion": "^10.13.1",
@@ -45,15 +45,16 @@
     "lucide-react": "^0.292.0",
     "next": "^15.1.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
     "react-beforeunload": "^2.6.0",
     "react-day-picker": "^8.9.1",
+    "react-dom": "^19.0.0",
+    "react-error-boundary": "^4.1.2",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.10.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.0",
-    "react-toastify": "^9.1.3",
+    "react-toastify": "^11.0.0",
     "recharts": "^2.3.2",
     "redux-persist": "^6.0.0",
     "source-map-explorer": "^2.5.3",
