--- a/package.json
+++ b/package.json
@@ -69,7 +69,9 @@
     "@types/react-beforeunload": "^2.1.1",
     "autoprefixer": "^10.4.14",
     "craco-less": "^3.0.1",
+    "eslint": "^9.17.0",
     "eslint-config-alloy": "^5.0.0",
+    "eslint-config-next": "^15.1.3",
     "eslint-config-react-hooks": "^1.0.0",
     "eslint-plugin-alloy": "^1.2.1",
     "eslint-plugin-prettier": "^4.2.1",
