--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:view": "npx prisma studio",
+    "db:init": "npx prisma generate && npx prisma db push",
+    "db:reset": "npx prisma migrate reset --force"
   },
   "dependencies": {
     "@ant-design/pro-components": "^2.3.54",
+    "@clerk/nextjs": "^6.12.1",
     "@floating-ui/react": "^0.25.0",
     "@hookform/resolvers": "^3.3.2",
     "@million/lint": "^1.0.14",
     "@octokit/rest": "^19.0.11",
+    "@prisma/client": "^6.4.1",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
@@ -78,6 +83,7 @@
     "postcss-nested": "^6.0.1",
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.4.1",
+    "prisma": "^6.4.1",
     "tailwindcss": "^3.3.3"
   },
   "eslintConfig": {
