--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "@million/lint": "^1.0.14",
     "@octokit/rest": "^19.0.11",
     "@prisma/client": "^6.4.1",
+    "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@reduxjs/toolkit": "^1.9.2",
     "@svgr/webpack": "^8.1.0",
     "@tanstack/react-query": "^4.32.6",
